--- a/kerykeion/charts/templates/chart.xml
+++ b/kerykeion/charts/templates/chart.xml
@@ -111,24 +111,29 @@ OpenAstro.org -->
         <!-- Houses_And_Planets_Grid -->
         <g kr:node="Houses_And_Planets_Grid">
             <!-- Planet Grid -->
-            <g kr:node="Planet_Grid" transform="translate(590,50)">
+            <g kr:node="Planet_Grid" transform="translate(620,30)">
                 $makePlanetGrid
             </g>
 
             <!-- Houses Grid -->
-            <g kr:node="Houses_Grid" transform="translate(0,50)">
+            <g kr:node="Houses_Grid" transform="translate(20,30)">
                 $makeHousesGrid
             </g>
 
             <!-- House Comparison Grid -->
-            <g kr:node="House_Comparison_Table" transform="translate(0,50)">
+            <g kr:node="House_Comparison_Table" transform="translate(50,30)">
                 $makeHouseComparisonGrid
             </g>
         </g>
 
-        <!-- AspectGrid -->
-        <g kr:node="Aspect_Grid">
+        <!-- Single Chart Aspect -->
+        <g kr:node="Aspect_Grid"  transform="translate(0,50)">
             $makeAspectGrid
+        </g>
+
+        <!-- Double Chart Chart Aspects -->
+        <g kr:node="Aspect_List"  transform="translate(50,50)">
+            $makeDoubleChartAspectList
         </g>
     </g>
 
