--- a/kerykeion/charts/templates/chart.xml
+++ b/kerykeion/charts/templates/chart.xml
@@ -1,6 +1,4 @@
-<?xml version='1.0' encoding='UTF-8'?>
-<!--- This file is part of Kerykeion and is based on
-OpenAstro.org -->
+<!--- This file is part of Kerykeion and is based on OpenAstro.org -->
 <svg
     xmlns="http://www.w3.org/2000/svg"
     xmlns:xlink="http://www.w3.org/1999/xlink"
