feat: add background_circle to all chart types
- Add background_circle field to ChartTemplateDictionary type
- Import draw_background_circle function in kerykeion_chart_svg.py
- Add background_circle template to wheel_only.xml
- Implement background_circle in all chart types:
  - Natal/ExternalNatal charts
  - Composite charts
  - Transit charts
  - Synastry charts
  - Return charts
  - SingleWheelReturn charts
- Background circle uses theme color (paper_1) for consistent styling
- Follows the same pattern as first_circle implementation

--- a/kerykeion/charts/templates/wheel_only.xml
+++ b/kerykeion/charts/templates/wheel_only.xml
@@ -21,6 +21,12 @@
 
         <!-- Full Wheel -->
         <g kr:node="Full_Wheel" transform="translate(100,50)">
+
+            <!-- Background Circle -->
+            <g kr:node='Background_Circle'>
+                $background_circle
+            </g>
+
             <!-- Zodiac -->
             <g kr:node="Zodiac">
                 $makeZodiac
