feat: add background_circle to all chart types
- Add background_circle field to ChartTemplateDictionary type
- Import draw_background_circle function in kerykeion_chart_svg.py
- Add background_circle template to wheel_only.xml
- Implement background_circle in all chart types:
  - Natal/ExternalNatal charts
  - Composite charts
  - Transit charts
  - Synastry charts
  - Return charts
  - SingleWheelReturn charts
- Background circle uses theme color (paper_1) for consistent styling
- Follows the same pattern as first_circle implementation

--- a/kerykeion/charts/templates/aspect_grid_only.xml
+++ b/kerykeion/charts/templates/aspect_grid_only.xml
@@ -7,7 +7,7 @@
     height="100%"
     viewBox="28 20 255 250"
     preserveAspectRatio="xMidYMid"
-    style="background-color: $paper_color_1"
+    style="background-color: $background_color"
 >
 
     <!-- Colors -->
