--- a/kerykeion/charts/templates/chart.xml
+++ b/kerykeion/charts/templates/chart.xml
@@ -160,48 +160,48 @@
         </symbol>
         <!-- OTHER POINTS -->
         <symbol id="Earth">
-            <circle cx="12" cy="12" r="10" style="stroke: #888; stroke-width: 2px; fill: none;" />
-            <text x="12" y="17" text-anchor="middle" font-size="10" fill="#888">Earth</text>
+            <circle cx="12" cy="12" r="10" style="stroke: $planets_color_21; stroke-width: 2px; fill: none;" />
+            <text x="12" y="17" text-anchor="middle" font-size="10" fill="$planets_color_21">Earth</text>
         </symbol>
         <symbol id="Pholus">
             <circle cx="12" cy="12" r="10" style="stroke: #888; stroke-width: 2px; fill: none;" />
             <text x="12" y="17" text-anchor="middle" font-size="10" fill="#888">Pholus</text>
         </symbol>
         <symbol id="Sedna">
-            <circle cx="12" cy="12" r="10" style="stroke: #888; stroke-width: 2px; fill: none;" />
-            <text x="12" y="17" text-anchor="middle" font-size="10" fill="#888">Sedna</text>
+            <circle cx="12" cy="12" r="10" style="stroke: $planets_color_28; stroke-width: 2px; fill: none;" />
+            <text x="12" y="17" text-anchor="middle" font-size="10" fill="$planets_color_28">Sedna</text>
         </symbol>
         <symbol id="Haumea">
-            <circle cx="12" cy="12" r="10" style="stroke: #888; stroke-width: 2px; fill: none;" />
-            <text x="12" y="17" text-anchor="middle" font-size="10" fill="#888">Haumea</text>
+            <circle cx="12" cy="12" r="10" style="stroke: $planets_color_29; stroke-width: 2px; fill: none;" />
+            <text x="12" y="17" text-anchor="middle" font-size="10" fill="$planets_color_29">Haumea</text>
         </symbol>
         <symbol id="Makemake">
-            <circle cx="12" cy="12" r="10" style="stroke: #888; stroke-width: 2px; fill: none;" />
-            <text x="12" y="17" text-anchor="middle" font-size="10" fill="#888">Makemake</text>
+            <circle cx="12" cy="12" r="10" style="stroke: $planets_color_30; stroke-width: 2px; fill: none;" />
+            <text x="12" y="17" text-anchor="middle" font-size="10" fill="$planets_color_30">Makemake</text>
         </symbol>
         <symbol id="Ixion">
-            <circle cx="12" cy="12" r="10" style="stroke: #888; stroke-width: 2px; fill: none;" />
-            <text x="12" y="17" text-anchor="middle" font-size="10" fill="#888">Ixion</text>
+            <circle cx="12" cy="12" r="10" style="stroke: $planets_color_31; stroke-width: 2px; fill: none;" />
+            <text x="12" y="17" text-anchor="middle" font-size="10" fill="$planets_color_31">Ixion</text>
         </symbol>
         <symbol id="Orcus">
             <circle cx="12" cy="12" r="10" style="stroke: #888; stroke-width: 2px; fill: none;" />
             <text x="12" y="17" text-anchor="middle" font-size="10" fill="#888">Orcus</text>
         </symbol>
         <symbol id="Quaoar">
-            <circle cx="12" cy="12" r="10" style="stroke: #888; stroke-width: 2px; fill: none;" />
-            <text x="12" y="17" text-anchor="middle" font-size="10" fill="#888">Quaoar</text>
+            <circle cx="12" cy="12" r="10" style="stroke: $planets_color_33; stroke-width: 2px; fill: none;" />
+            <text x="12" y="17" text-anchor="middle" font-size="10" fill="$planets_color_33">Quaoar</text>
         </symbol>
         <symbol id="Regulus">
-            <circle cx="12" cy="12" r="10" style="stroke: #888; stroke-width: 2px; fill: none;" />
-            <text x="12" y="17" text-anchor="middle" font-size="10" fill="#888">Regulus</text>
+            <circle cx="12" cy="12" r="10" style="stroke: $planets_color_34; stroke-width: 2px; fill: none;" />
+            <text x="12" y="17" text-anchor="middle" font-size="10" fill="$planets_color_34">Regulus</text>
         </symbol>
         <symbol id="Spica">
-            <circle cx="12" cy="12" r="10" style="stroke: #888; stroke-width: 2px; fill: none;" />
-            <text x="12" y="17" text-anchor="middle" font-size="10" fill="#888">Spica</text>
+            <circle cx="12" cy="12" r="10" style="stroke: $planets_color_35; stroke-width: 2px; fill: none;" />
+            <text x="12" y="17" text-anchor="middle" font-size="10" fill="$planets_color_35">Spica</text>
         </symbol>
         <symbol id="Anti_Vertex">
-            <circle cx="12" cy="12" r="10" style="stroke: #888; stroke-width: 2px; fill: none;" />
-            <text x="12" y="17" text-anchor="middle" font-size="10" fill="#888">Anti-Vertex</text>
+            <circle cx="12" cy="12" r="10" style="stroke: $planets_color_41; stroke-width: 2px; fill: none;" />
+            <text x="12" y="17" text-anchor="middle" font-size="10" fill="$planets_color_41">Anti-Vertex</text>
         </symbol>
         <symbol id="Moon">
             <g transform="translate(4,3)">
@@ -392,7 +392,7 @@
         </symbol>
 
         <symbol id="Vertex">
-            <text y="20" style="font-size: 22px; fill: $planets_color_22">Vx</text>
+            <text y="20" style="font-size: 22px; fill: $planets_color_40">Vx</text>
         </symbol>
 
         <symbol id="East_Point">
@@ -428,29 +428,29 @@
         <symbol id="Pars_Spiritus">
             <g transform="translate(1,2)">
                 <circle cx="11" cy="11" r="9"
-                    style="fill: none; stroke: $planets_color_26; stroke-width: 2px" />
+                    style="fill: none; stroke: $planets_color_37; stroke-width: 2px" />
                 <path d="M 7,11 L 15,11 M 11,7 L 11,15"
-                    style="stroke: $planets_color_26; stroke-width: 2px; fill: none;" />
+                    style="stroke: $planets_color_37; stroke-width: 2px; fill: none;" />
                 <path d="M 7,7 L 15,15 M 7,15 L 15,7"
-                    style="stroke: $planets_color_26; stroke-width: 2px; fill: none;" />
+                    style="stroke: $planets_color_37; stroke-width: 2px; fill: none;" />
             </g>
         </symbol>
 
         <symbol id="Pars_Amoris">
             <g transform="translate(1,2)">
                 <circle cx="11" cy="11" r="9"
-                    style="fill: none; stroke: $planets_color_28; stroke-width: 2px" />
+                    style="fill: none; stroke: $planets_color_38; stroke-width: 2px" />
                 <path d="M 7,7 C 9,5 13,5 15,7 C 17,9 17,13 15,15 C 13,17 9,17 7,15 C 5,13 5,9 7,7 Z"
-                    style="stroke: $planets_color_28; stroke-width: 2px; fill: none;" />
+                    style="stroke: $planets_color_38; stroke-width: 2px; fill: none;" />
             </g>
         </symbol>
 
         <symbol id="Pars_Fidei">
             <g transform="translate(1,2)">
                 <circle cx="11" cy="11" r="9"
-                    style="fill: none; stroke: $planets_color_32; stroke-width: 2px" />
+                    style="fill: none; stroke: $planets_color_39; stroke-width: 2px" />
                 <path d="M 6,11 L 16,11 M 11,6 L 11,16 M 8,8 L 14,14"
-                    style="stroke: $planets_color_32; stroke-width: 2px; fill: none;" />
+                    style="stroke: $planets_color_39; stroke-width: 2px; fill: none;" />
             </g>
         </symbol>
 
