--- a/kerykeion/charts/templates/wheel_only.xml
+++ b/kerykeion/charts/templates/wheel_only.xml
@@ -87,48 +87,48 @@
         </symbol>
         <!-- OTHER POINTS -->
         <symbol id="Earth">
-            <circle cx="12" cy="12" r="10" style="stroke: #888; stroke-width: 2px; fill: none;" />
-            <text x="12" y="17" text-anchor="middle" font-size="10" fill="#888">Earth</text>
+            <circle cx="12" cy="12" r="10" style="stroke: $planets_color_21; stroke-width: 2px; fill: none;" />
+            <text x="12" y="17" text-anchor="middle" font-size="10" fill="$planets_color_21">Earth</text>
         </symbol>
         <symbol id="Pholus">
             <circle cx="12" cy="12" r="10" style="stroke: #888; stroke-width: 2px; fill: none;" />
             <text x="12" y="17" text-anchor="middle" font-size="10" fill="#888">Pholus</text>
         </symbol>
         <symbol id="Sedna">
-            <circle cx="12" cy="12" r="10" style="stroke: #888; stroke-width: 2px; fill: none;" />
-            <text x="12" y="17" text-anchor="middle" font-size="10" fill="#888">Sedna</text>
+            <circle cx="12" cy="12" r="10" style="stroke: $planets_color_28; stroke-width: 2px; fill: none;" />
+            <text x="12" y="17" text-anchor="middle" font-size="10" fill="$planets_color_28">Sedna</text>
         </symbol>
         <symbol id="Haumea">
-            <circle cx="12" cy="12" r="10" style="stroke: #888; stroke-width: 2px; fill: none;" />
-            <text x="12" y="17" text-anchor="middle" font-size="10" fill="#888">Haumea</text>
+            <circle cx="12" cy="12" r="10" style="stroke: $planets_color_29; stroke-width: 2px; fill: none;" />
+            <text x="12" y="17" text-anchor="middle" font-size="10" fill="$planets_color_29">Haumea</text>
         </symbol>
         <symbol id="Makemake">
-            <circle cx="12" cy="12" r="10" style="stroke: #888; stroke-width: 2px; fill: none;" />
-            <text x="12" y="17" text-anchor="middle" font-size="10" fill="#888">Makemake</text>
+            <circle cx="12" cy="12" r="10" style="stroke: $planets_color_30; stroke-width: 2px; fill: none;" />
+            <text x="12" y="17" text-anchor="middle" font-size="10" fill="$planets_color_30">Makemake</text>
         </symbol>
         <symbol id="Ixion">
-            <circle cx="12" cy="12" r="10" style="stroke: #888; stroke-width: 2px; fill: none;" />
-            <text x="12" y="17" text-anchor="middle" font-size="10" fill="#888">Ixion</text>
+            <circle cx="12" cy="12" r="10" style="stroke: $planets_color_31; stroke-width: 2px; fill: none;" />
+            <text x="12" y="17" text-anchor="middle" font-size="10" fill="$planets_color_31">Ixion</text>
         </symbol>
         <symbol id="Orcus">
             <circle cx="12" cy="12" r="10" style="stroke: #888; stroke-width: 2px; fill: none;" />
             <text x="12" y="17" text-anchor="middle" font-size="10" fill="#888">Orcus</text>
         </symbol>
         <symbol id="Quaoar">
-            <circle cx="12" cy="12" r="10" style="stroke: #888; stroke-width: 2px; fill: none;" />
-            <text x="12" y="17" text-anchor="middle" font-size="10" fill="#888">Quaoar</text>
+            <circle cx="12" cy="12" r="10" style="stroke: $planets_color_33; stroke-width: 2px; fill: none;" />
+            <text x="12" y="17" text-anchor="middle" font-size="10" fill="$planets_color_33">Quaoar</text>
         </symbol>
         <symbol id="Regulus">
-            <circle cx="12" cy="12" r="10" style="stroke: #888; stroke-width: 2px; fill: none;" />
-            <text x="12" y="17" text-anchor="middle" font-size="10" fill="#888">Regulus</text>
+            <circle cx="12" cy="12" r="10" style="stroke: $planets_color_34; stroke-width: 2px; fill: none;" />
+            <text x="12" y="17" text-anchor="middle" font-size="10" fill="$planets_color_34">Regulus</text>
         </symbol>
         <symbol id="Spica">
-            <circle cx="12" cy="12" r="10" style="stroke: #888; stroke-width: 2px; fill: none;" />
-            <text x="12" y="17" text-anchor="middle" font-size="10" fill="#888">Spica</text>
+            <circle cx="12" cy="12" r="10" style="stroke: $planets_color_35; stroke-width: 2px; fill: none;" />
+            <text x="12" y="17" text-anchor="middle" font-size="10" fill="$planets_color_35">Spica</text>
         </symbol>
         <symbol id="Anti_Vertex">
-            <circle cx="12" cy="12" r="10" style="stroke: #888; stroke-width: 2px; fill: none;" />
-            <text x="12" y="17" text-anchor="middle" font-size="10" fill="#888">Anti-Vertex</text>
+            <circle cx="12" cy="12" r="10" style="stroke: $planets_color_41; stroke-width: 2px; fill: none;" />
+            <text x="12" y="17" text-anchor="middle" font-size="10" fill="$planets_color_41">Anti-Vertex</text>
         </symbol>
         <symbol id="Moon">
             <g transform="translate(4,3)">
@@ -319,7 +319,7 @@
         </symbol>
 
         <symbol id="Vertex">
-            <text y="20" style="font-size: 22px; fill: $planets_color_22">Vx</text>
+            <text y="20" style="font-size: 22px; fill: $planets_color_40">Vx</text>
         </symbol>
 
         <symbol id="East_Point">
