--- a/kerykeion/charts/templates/chart.xml
+++ b/kerykeion/charts/templates/chart.xml
@@ -164,8 +164,8 @@
             <text x="12" y="17" text-anchor="middle" font-size="10" fill="$planets_color_21">Earth</text>
         </symbol>
         <symbol id="Pholus">
-            <circle cx="12" cy="12" r="10" style="stroke: #888; stroke-width: 2px; fill: none;" />
-            <text x="12" y="17" text-anchor="middle" font-size="10" fill="#888">Pholus</text>
+            <circle cx="12" cy="12" r="10" style="stroke: $planets_color_22; stroke-width: 2px; fill: none;" />
+            <text x="12" y="17" text-anchor="middle" font-size="10" fill="$planets_color_22">Pholus</text>
         </symbol>
         <symbol id="Sedna">
             <circle cx="12" cy="12" r="10" style="stroke: $planets_color_28; stroke-width: 2px; fill: none;" />
@@ -184,8 +184,8 @@
             <text x="12" y="17" text-anchor="middle" font-size="10" fill="$planets_color_31">Ixion</text>
         </symbol>
         <symbol id="Orcus">
-            <circle cx="12" cy="12" r="10" style="stroke: #888; stroke-width: 2px; fill: none;" />
-            <text x="12" y="17" text-anchor="middle" font-size="10" fill="#888">Orcus</text>
+            <circle cx="12" cy="12" r="10" style="stroke: $planets_color_32; stroke-width: 2px; fill: none;" />
+            <text x="12" y="17" text-anchor="middle" font-size="10" fill="$planets_color_32">Orcus</text>
         </symbol>
         <symbol id="Quaoar">
             <circle cx="12" cy="12" r="10" style="stroke: $planets_color_33; stroke-width: 2px; fill: none;" />
@@ -322,7 +322,7 @@
                 <g transform="scale(.75)">
                     <path
                         d="M 13.891439,23.899148 C 16.831061,23.16167 19.42871,20.957929 20.393204,18.051853 C 21.020409,16.655337 20.990829,15.041667 20.533362,13.600675 C 20.114218,11.835116 19.107819,10.284901 18.004613,8.8731359 C 17.010334,7.1652064 16.695528,4.9968194 17.378257,3.1191925 C 17.758616,2.134839 18.612459,1.1290194 19.747609,1.122205 C 20.856714,1.1522691 21.68807,2.1940507 21.762984,3.2502572 C 21.912267,4.7681974 20.969993,6.4261707 19.471746,6.8713331 C 19.067889,7.1616711 18.25164,6.6059847 18.085179,6.9788263 C 19.290894,8.1433226 21.294758,8.0903554 22.639135,7.1933294 C 23.815746,6.4142182 24.244753,4.8354574 23.866042,3.513777 C 23.579596,1.951978 22.299181,0.68814445 20.784404,0.28003765 C 19.338156,-0.21325355 17.636132,-0.074257846 16.389677,0.85208495 C 14.815514,1.7718962 14.147431,3.6918765 14.163087,5.4368764 C 14.158082,6.4844752 14.521263,7.4854719 14.829092,8.4735115 C 15.207397,9.5849835 15.743054,10.635344 16.373553,11.623268 C 17.391254,13.444769 18.097991,15.578055 17.73759,17.680935 C 17.264619,20.303885 14.771995,22.367369 12.114619,22.391402 C 10.221592,22.570108 8.4623977,21.408784 7.3640695,19.946934 C 5.9800493,18.024601 5.7632677,15.423089 6.5407261,13.21741 C 7.0447364,11.683217 7.9039267,10.303136 8.7551602,8.9442496 C 9.3673378,7.7170077 9.5453858,6.3050768 9.4520188,4.9498232 C 9.3273658,3.5827422 9.055649,2.055641 7.9264908,1.1408811 C 5.9170924,-0.45587205 2.5879904,-0.21634735 1.0121097,1.878869 C -0.10699561,3.3638861 -0.077071356,5.7321616 1.3439679,7.0142862 C 2.2628957,7.7723325 3.5523542,8.1172364 4.7082249,7.7533106 C 5.2902186,7.5823499 5.8305214,7.2547717 6.2290478,6.7948231 C 5.2075081,6.7604711 3.9811354,6.8872988 3.2192579,6.0602046 C 2.4586494,4.9643087 2.1899922,3.4530691 2.7277339,2.20348 C 3.1104121,1.3003657 4.160788,0.64048665 5.1397626,0.98349485 C 6.2468062,1.3370711 6.9552792,2.4455554 7.0537996,3.5696899 C 7.3808409,5.492555 7.1315,7.5939422 5.9619608,9.2041629 C 5.2025142,10.29701 4.2871193,11.315357 3.8562083,12.598809 C 2.7918212,15.240251 3.4299247,18.367596 5.1702811,20.571791 C 6.8286269,22.84876 9.6781638,24.154892 12.482992,23.997045 C 12.953784,23.989488 13.423977,23.955037 13.891439,23.899148 z "
-                        style="fill: $planets_color_10" />
+                        style="fill: $planets_color_18" />
                 </g>
             </g>
         </symbol>
@@ -331,63 +331,63 @@
                 <g transform="scale(.75)">
                     <path
                         d="M 13.891439,23.899148 C 16.831061,23.16167 19.42871,20.957929 20.393204,18.051853 C 21.020409,16.655337 20.990829,15.041667 20.533362,13.600675 C 20.114218,11.835116 19.107819,10.284901 18.004613,8.8731359 C 17.010334,7.1652064 16.695528,4.9968194 17.378257,3.1191925 C 17.758616,2.134839 18.612459,1.1290194 19.747609,1.122205 C 20.856714,1.1522691 21.68807,2.1940507 21.762984,3.2502572 C 21.912267,4.7681974 20.969993,6.4261707 19.471746,6.8713331 C 19.067889,7.1616711 18.25164,6.6059847 18.085179,6.9788263 C 19.290894,8.1433226 21.294758,8.0903554 22.639135,7.1933294 C 23.815746,6.4142182 24.244753,4.8354574 23.866042,3.513777 C 23.579596,1.951978 22.299181,0.68814445 20.784404,0.28003765 C 19.338156,-0.21325355 17.636132,-0.074257846 16.389677,0.85208495 C 14.815514,1.7718962 14.147431,3.6918765 14.163087,5.4368764 C 14.158082,6.4844752 14.521263,7.4854719 14.829092,8.4735115 C 15.207397,9.5849835 15.743054,10.635344 16.373553,11.623268 C 17.391254,13.444769 18.097991,15.578055 17.73759,17.680935 C 17.264619,20.303885 14.771995,22.367369 12.114619,22.391402 C 10.221592,22.570108 8.4623977,21.408784 7.3640695,19.946934 C 5.9800493,18.024601 5.7632677,15.423089 6.5407261,13.21741 C 7.0447364,11.683217 7.9039267,10.303136 8.7551602,8.9442496 C 9.3673378,7.7170077 9.5453858,6.3050768 9.4520188,4.9498232 C 9.3273658,3.5827422 9.055649,2.055641 7.9264908,1.1408811 C 5.9170924,-0.45587205 2.5879904,-0.21634735 1.0121097,1.878869 C -0.10699561,3.3638861 -0.077071356,5.7321616 1.3439679,7.0142862 C 2.2628957,7.7723325 3.5523542,8.1172364 4.7082249,7.7533106 C 5.2902186,7.5823499 5.8305214,7.2547717 6.2290478,6.7948231 C 5.2075081,6.7604711 3.9811354,6.8872988 3.2192579,6.0602046 C 2.4586494,4.9643087 2.1899922,3.4530691 2.7277339,2.20348 C 3.1104121,1.3003657 4.160788,0.64048665 5.1397626,0.98349485 C 6.2468062,1.3370711 6.9552792,2.4455554 7.0537996,3.5696899 C 7.3808409,5.492555 7.1315,7.5939422 5.9619608,9.2041629 C 5.2025142,10.29701 4.2871193,11.315357 3.8562083,12.598809 C 2.7918212,15.240251 3.4299247,18.367596 5.1702811,20.571791 C 6.8286269,22.84876 9.6781638,24.154892 12.482992,23.997045 C 12.953784,23.989488 13.423977,23.955037 13.891439,23.899148 z "
-                        style="fill: $planets_color_11" />
+                        style="fill: $planets_color_19" />
                 </g>
             </g>
         </symbol>
         <symbol id="Chiron">
             <path
                 d="M 10.019873,13.068981 L 10.185542,0.80951431 M 10.195591,6.7442901 L 15.496983,2.2712408 M 10.214831,6.6321726 L 15.516217,11.105216 M 17.192934,17.998774 C 17.192934,20.8646 14.867052,23.190487 12.001226,23.190487 C 9.1353988,23.190487 6.8095128,20.8646 6.8095128,17.998774 C 6.8095128,15.132953 9.1353988,12.807066 12.001226,12.807066 C 14.867052,12.807066 17.192934,15.132953 17.192934,17.998774 z "
-                style="stroke: $planets_color_16;stroke-width:2px; fill:none;" />
+                style="stroke: $planets_color_12;stroke-width:2px; fill:none;" />
         </symbol>
         <symbol id="Mean_Lilith">
             <g transform="translate(1,2)">
                 <path
                     d="M 5.2255055,0.5001842 C 4.5318761,0.5265765 3.8737679,0.6459111 3.2335607,0.83217502 C 6.682099,1.8494555 9.2093951,5.0469634 9.2093951,8.8236674 C 9.2093953,12.600373 6.682099,15.797873 3.2335607,16.815161 C 3.9722573,17.030079 4.7497456,17.147152 5.5574963,17.147152 C 6.4110015,17.147152 7.2245796,17.006704 8,16.767734 L 8,19.803079 L 4.490383,19.803079 L 4.490383,21.629028 L 8,21.629028 L 8,23.739541 L 9.7785222,23.739541 L 9.7785222,21.629028 L 13.430421,21.629028 L 13.430421,19.803079 L 9.7785222,19.803079 L 9.7785222,15.985184 C 12.226487,14.535184 13.88098,11.873186 13.88098,8.8236674 C 13.88098,4.2284374 10.152727,0.5001842 5.5574963,0.5001842 C 5.4497948,0.5001842 5.3322206,0.4961168 5.2255055,0.5001842 z"
-                    style="fill: $planets_color_16;" />
+                    style="fill: $planets_color_17;" />
             </g>
         </symbol>
         <symbol id="Ascendant">
-            <text y="20" style="font-size: 22px; fill: $planets_color_12">As</text>
+            <text y="20" style="font-size: 22px; fill: $planets_color_13">As</text>
         </symbol>
         <symbol id="Medium_Coeli">
-            <text y="20" style="font-size: 20px; fill: $planets_color_13">Mc</text>
+            <text y="20" style="font-size: 20px; fill: $planets_color_14">Mc</text>
         </symbol>
         <symbol id="Descendant">
-            <text y="20" style="font-size: 22px; fill: $planets_color_14">Ds</text>
+            <text y="20" style="font-size: 22px; fill: $planets_color_15">Ds</text>
         </symbol>
         <symbol id="Imum_Coeli">
-            <text y="20" style="font-size: 22px; fill: $planets_color_15">Ic</text>
+            <text y="20" style="font-size: 22px; fill: $planets_color_16">Ic</text>
         </symbol>
 
         <!-- Asteroids and additional points -->
         <symbol id="Ceres">
             <g transform="translate(1,2)">
                 <path d="M 11.5,0.5 L 11.5,21.5 M 7.5,4 L 15.5,4 M 5,10 L 17,10"
-                    style="stroke: $planets_color_17; stroke-width: 2px; fill: none;" />
+                    style="stroke: $planets_color_23; stroke-width: 2px; fill: none;" />
                 <circle cx="11.5" cy="15" r="5"
-                    style="stroke: $planets_color_17; stroke-width: 2px; fill: none;" />
+                    style="stroke: $planets_color_23; stroke-width: 2px; fill: none;" />
             </g>
         </symbol>
 
         <symbol id="Pallas">
             <g transform="translate(1,2)">
                 <path d="M 11,0.5 L 11,21.5 M 6,6 L 16,6 M 4,12 L 18,12"
-                    style="stroke: $planets_color_18; stroke-width: 2px; fill: none;" />
+                    style="stroke: $planets_color_24; stroke-width: 2px; fill: none;" />
             </g>
         </symbol>
 
         <symbol id="Juno">
             <g transform="translate(1,2)">
                 <path d="M 5,5 C 5,2 11,0 11,0 C 11,0 17,2 17,5 C 17,9 13,9 11,15 C 9,9 5,9 5,5 z M 7,18 L 15,18 M 11,15 L 11,21"
-                    style="stroke: $planets_color_19; stroke-width: 2px; fill: none;" />
+                    style="stroke: $planets_color_25; stroke-width: 2px; fill: none;" />
             </g>
         </symbol>
 
         <symbol id="Vesta">
             <g transform="translate(1,2)">
                 <path d="M 7,0.5 L 15,0.5 M 11,0.5 L 11,13 M 6,6 L 16,6 M 7,20 C 7,16 15,16 15,20 C 15,24 7,24 7,20 z"
-                    style="stroke: $planets_color_20; stroke-width: 2px; fill: none;" />
+                    style="stroke: $planets_color_26; stroke-width: 2px; fill: none;" />
             </g>
         </symbol>
 
@@ -403,16 +403,16 @@
             <g transform="translate(1,2)">
                 <path
                     d="M 5.2255055,0.5001842 C 4.5318761,0.5265765 3.8737679,0.6459111 3.2335607,0.83217502 C 6.682099,1.8494555 9.2093951,5.0469634 9.2093951,8.8236674 C 9.2093953,12.600373 6.682099,15.797873 3.2335607,16.815161 C 3.9722573,17.030079 4.7497456,17.147152 5.5574963,17.147152 C 6.4110015,17.147152 7.2245796,17.006704 8,16.767734 L 8,19.803079 L 4.490383,19.803079 L 4.490383,21.629028 L 8,21.629028 L 8,23.739541 L 9.7785222,23.739541 L 9.7785222,21.629028 L 13.430421,21.629028 L 13.430421,19.803079 L 9.7785222,19.803079 L 9.7785222,15.985184 C 12.226487,14.535184 13.88098,11.873186 13.88098,8.8236674 C 13.88098,4.2284374 10.152727,0.5001842 5.5574963,0.5001842 C 5.4497948,0.5001842 5.3322206,0.4961168 5.2255055,0.5001842 z"
-                    style="fill: $planets_color_24;" />
+                    style="fill: $planets_color_20;" />
             </g>
         </symbol>
 
         <symbol id="Eris">
             <g transform="translate(1,2)">
                 <path d="M 8,4 L 14,4 M 6,8 L 16,8 M 4,12 L 18,12 M 6,16 L 16,16 M 8,20 L 14,20"
-                    style="stroke: $planets_color_25; stroke-width: 2px; fill: none;" />
+                    style="stroke: $planets_color_27; stroke-width: 2px; fill: none;" />
                 <circle cx="11" cy="11" r="10"
-                    style="fill: none; stroke: $planets_color_25; stroke-width: 2px" />
+                    style="fill: none; stroke: $planets_color_27; stroke-width: 2px" />
             </g>
         </symbol>
 
