--- a/kerykeion/charts/templates/wheel_only.xml
+++ b/kerykeion/charts/templates/wheel_only.xml
@@ -5,7 +5,7 @@
     xmlns:kr="https://www.kerykeion.net/"
     width="100%"
     height="100%"
-    viewBox="90 40 500 500"
+    viewBox="$viewbox"
     preserveAspectRatio="xMidYMid"
     style="background-color: $background_color"
 >
